all product pages added

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <img src="/images/products/1.jpg" class="card-img-top rounded-0" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Title</h5>
-                            <a href="#" class="btn btn-sm btn-primary">LINK</a>
+                            <a href="products/index.html" class="btn btn-sm btn-primary">LINK</a>
                         </div>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                         <img src="/images/products/2.jpg" class="card-img-top rounded-0" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Title</h5>
-                            <a href="#" class="btn btn-sm btn-primary">LINK</a>
+                            <a href="products/index.html" class="btn btn-sm btn-primary">LINK</a>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                         <img src="/images/products/3.jpg" class="card-img-top rounded-0" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Title</h5>
-                            <a href="#" class="btn btn-sm btn-primary">LINK</a>
+                            <a href="products/index.html" class="btn btn-sm btn-primary">LINK</a>
                         </div>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
                         <img src="/images/products/4.jpg" class="card-img-top rounded-0" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Title</h5>
-                            <a href="#" class="btn btn-sm btn-primary">LINK</a>
+                            <a href="products/index.html" class="btn btn-sm btn-primary">LINK</a>
                         </div>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
                         <img src="/images/products/5.jpg" class="card-img-top rounded-0" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Title</h5>
-                            <a href="#" class="btn btn-sm btn-primary">LINK</a>
+                            <a href="products/index.html" class="btn btn-sm btn-primary">LINK</a>
                         </div>
                     </div>
                 </div>
@@ -175,7 +175,7 @@
                         <img src="/images/products/6.jpg" class="card-img-top rounded-0" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Title</h5>
-                            <a href="#" class="btn btn-sm btn-primary">LINK</a>
+                            <a href="products/index.html" class="btn btn-sm btn-primary">LINK</a>
                         </div>
                     </div>
                 </div>
