--- a/products/index.html
+++ b/products/index.html
@@ -83,7 +83,7 @@
         </div>
 
         <div data-double='true' >
-            <img src='./images/LOGO.png' />
+            <img src='./images/2.jpg' />
         </div>
 
         <div class='last_cover'>
